--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <a href="{% url 'home-page' %}" class="logo">ShopMe</a>
+  <a href="{% url 'product-list-page' %}" class="logo">ShopMe</a>
 
   <div class="search-bar">
     <form action="{% url 'product-list-page' %}" method="get" role="search" aria-label="Product search">
